[gd_scene load_steps=16 format=1]

[ext_resource path="res://Scenes/SpaceRaceGame.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Handlers/ScreenHandler.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Components/Title/TitleScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Components/GalaxySettings/GalaxySettingsScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Components/RaceIntro/RaceIntroScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Components/Galaxy/GalaxyScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Components/PlanetList/PlanetListScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Components/ShipList/ShipListScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Components/Research/ResearchScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Components/RaceOverview/RaceOverviewScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Components/RaceList/RaceListScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Components/Battle/BattleScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Components/Planet/PlanetScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Components/ShipDesign/ShipDesignScreen.tscn" type="PackedScene" id=14]

[sub_resource type="GDScript" id=1]

resource/name = "_ToDoList"
script/source = "extends Node

# TODO: global: make handlers autoload singletons
# TODO: the stuff that can be static (generators) needs CONST instead of VAR for imports
# TODO: Planet types and sizes might be fixed on start
# FIXME: Research can be researched infinity times
# FIXME: All events happen at once
# FIXME: ResearchScreen creates new random rotations on open
# FIXME: Event triggers are too lenient
# TODO: Events should be able to be closed using escape
# TODO: Laboratory ready event is triggered every time a first lab is created, even after abandoning


# FIXED: global: still getting one frame of previous planets in battle screen
## THEFIX: Viewport is set to always refresh instead of \"when visible\"; but this crashes godot, so it happens on _ready

"

[node name="SpaceRaceGame" type="Node"]

script/script = ExtResource( 1 )

[node name="ScreenHandler" type="Node" parent="."]

script/script = ExtResource( 2 )

[node name="TitleScreen" parent="ScreenHandler" instance=ExtResource( 3 )]

visibility/visible = false

[node name="GalaxySettingsScreen" parent="ScreenHandler" instance=ExtResource( 4 )]

visibility/visible = false

[node name="RaceIntroScreen" parent="ScreenHandler" instance=ExtResource( 5 )]

visibility/visible = false

[node name="GalaxyScreen" parent="ScreenHandler" instance=ExtResource( 6 )]

visibility/visible = false

[node name="PlanetListScreen" parent="ScreenHandler" instance=ExtResource( 7 )]

visibility/visible = false

[node name="ShipListScreen" parent="ScreenHandler" instance=ExtResource( 8 )]

visibility/visible = false
transform/pos = Vector2( 0, 0 )

[node name="ResearchScreen" parent="ScreenHandler" instance=ExtResource( 9 )]

visibility/visible = false

[node name="RaceOverviewScreen" parent="ScreenHandler" instance=ExtResource( 10 )]

visibility/visible = false
_is_overlay = true

[node name="RaceListScreen" parent="ScreenHandler" instance=ExtResource( 11 )]

visibility/visible = false

[node name="BattleScreen" parent="ScreenHandler" instance=ExtResource( 12 )]

visibility/visible = false

[node name="PlanetScreen" parent="ScreenHandler" instance=ExtResource( 13 )]

visibility/visible = false

[node name="ShipDesignScreen" parent="ScreenHandler" instance=ExtResource( 14 )]

visibility/visible = false

[node name="TurnHandler" type="Node" parent="."]

[node name="EventAnchor" type="Node" parent="."]

[node name="Global-ToDo" type="Node" parent="."]

script/script = SubResource( 1 )


